--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.2.3",
+    "dayjs": "^1.11.7",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-dotenv": "^3.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
